--- a/packages/web3-eth/package.json
+++ b/packages/web3-eth/package.json
@@ -10,7 +10,8 @@
     "test:integration": "jest ./test/integration"
   },
   "dependencies": {
-    "web3-core": "workspace:^"
+    "web3-core": "workspace:^",
+    "web3-utils": "workspace:^"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
