--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
       {
         "path": "./packages/web3-utils"
       },
+      {
+        "path": "./packages/web3-types"
+      },
     ],
     "compilerOptions": {
       /* Visit https://aka.ms/tsconfig to read more about this file */
